# spjaffolding

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/spjaffolding/: __init__.py  cli.py  generator.py  templates.py
tests/: test_e2e.py  test_templates.py
