[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spjaffolding"
version = "0.1.4"
description = "Produces rigorous advanced machine learning frameworks natively bypassing jinja"
readme = "README.md"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.scripts]
spjaffold = "spjaffolding.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.mypy]
strict = true

